# django-docker

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint-celery.sh  docker-entrypoint.sh
api/: .env.example  .env.sample  .gitignore  README.md  pyproject.toml  setup.cfg
api/django_docker/: asgi.py  conftest.py  manage.py  urls.py  wsgi.py
api/django_docker/config/: base.py  celery_app.py  local.py  production.py  test.py
api/django_docker/templates/: base.html
api/django_docker/users/: admin.py  forms.py  models.py
api/django_docker/users/tests/: test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
api/piedpiper/: asgi.py
api/piedpiper/config/: common.py  production.py
api/piedpiper/users/migrations/: 0003_alter_user_first_name.py
