[tool.poetry]
name = "piedpiper"
version = "0.1.0"
description = ""
authors = ["Jojo San Juan <jojo@bld.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2022.7.1"
Django = "^4.1.5"
django-configurations = "^2.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
dj-database-url = "^1.2.0"
django-model-utils = "^4.3.1"
django-unique-upload = "^0.2.1"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-storages = "^1.13.2"
boto3 = "^1.26.51"
django-environ = "^0.9.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
ipython = "^8.8.0"
mock = "^5.0.1"
factory-boy = "^3.2.1"
django-nose = "^1.4.7"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
